# ByParse

./: .gitignore  .pylintrc  README.md  mypy.ini  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  to_graph.py
byparse/: __init__.py  __main__.py  abc.py  ast_crawl.py  context_crawl.py  graph.py  identifiers.py  logging_utils.py  project_crawl.py  py_src_file.py  resolve_import.py  utils.py
byparse/graphs/: call_graph.py  context_graph.py
byparse/path_resolvers/: calls.py  imports.py  names.py
byparse/visualisation/: __init__.py  cytoscape_fcose.py  graph_vis.py  networkx.py  pyviz.py
cytovis/: README.md  demo-constraint-control.js  demo-constraint.html
src/byparse/: __main__.py  context_crawl.py  project_crawl.py
src/byparse/graphs/: __init__.py  call_graph.py  context_graph.py
src/byparse/path_resolvers/: imports.py  names.py
src/byparse/visualisation/: cytoscape_fcose.py  graph_vis.py  pyviz.py
tests/: test_resolve_imports.py  test_toy_project.py
tests/integration/: test_toy_project.py
tests/integration/path_resolvers/: test_resolve_call.py  test_resolve_imports.py
tests/toy_project/package/: __init__.py
tests/unit/: test_ast_crawl.py  test_context_crawl.py  test_py_src_file.py  test_resolve_call.py
toy_project/: __main__.py
toy_project/package/: __main__.py  module2.py
toy_project/package/submodules/: submodule1.py
toy_project/scripts/: script1.py
toy_project/scripts/subscripts/: subscript2.py
toy_project/utils/: utils.py
(+9 files in other folders)
